k8s/00-istio/10-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
