k8s/00-istio/50-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingressgateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts: &hosts
    - blog.mbell.dev
    - blog.k8s.mbell.dev
    - vault.k8s.mbell.dev
    tls:
      httpsRedirect: false
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts: *hosts
    tls:
      mode: SIMPLE
      credentialName: ingressgateway-tls
